# home_assistant_configs

./: .cursorignore  .gitignore  NOTICE  README.md  agents.md  config.example.yaml  conftest.py  cyberdeck_sync.py  dashboard_upload.py  ha_entity_discovery.py  home_assistant_backup.py  pyproject.toml  registry_metadata.example.yaml  utils.py
.github/: FUNDING.yml
dashboards/: filament.yaml
dashboards/Material-Design-3-Dynamic-Mobile-Dashboard/: MY_CUSTOMIZATIONS.md
dashboards/cyberdeck/: dashboard.yaml  sensors.yaml  theme.yaml
dashboards/general_home_mobile/: README.md  agents.md  dashboard.yaml  general_home_mobile.yaml  general_home_theme.jinja  ha_config_additions.yaml  popup_history_fix.js  registry_metadata.example.yaml  registry_metadata.yaml  sensors.yaml
home_assistant_backup/: automations.yaml  configuration.yaml  custom__sensors.yaml  scripts.yaml
home_assistant_backup/everything-presence-zone-configurator/: settings.json
home_assistant_backup/scripts/: generate_theme_thumbnails.py
home_assistant_backup_comments/: automations.yaml  quick_paste.yaml  spoolman_automations.yaml
hue asset/: Input Text for Room Selector.yaml
scripts/: apply_registry_metadata.py  cyberdeck_sync.py  dashboard_upload.py  general_home_dashboard_sync.py  general_home_sync.py  ha_entity_discovery.py  ha_registry.py  home_assistant_backup.py  utils.py
template sensor/: Active Notiifcation Count Sensor
tests/: test_config.py  test_conventions.py  test_ignore_patterns.py  test_process_backup_files.py  test_redaction.py  test_restore.py
(+11 files in other folders)
