[project]
name = "home-assistant-configs"
version = "0.1.0"
description = "Home Assistant configuration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-json-logger>=2.0.0",
    "smbprotocol>=1.16.0",
    "pyyaml>=6.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
